<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLight"
    tools:context=".ui.fragments.ingredients.Ingredients"
    tools:ignore="contentDescription, autofill">

    <TextView
        android:id="@+id/ingredientsEmptyInputMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients_empty_input_message"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintBottom_toTopOf="@+id/ingButtonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsEditText" />

    <TextView
        android:id="@+id/ingredientsIncorrectRequestMessage"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients_incorrect_request_message"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintBottom_toTopOf="@+id/ingButtonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsEditText" />

    <EditText
        android:id="@+id/ingredientsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:background="@drawable/edit_text_border"
        android:hint="@string/ingredients_edit_text_hint"
        android:inputType="textAutoComplete"
        android:padding="@dimen/margin_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ingredientsAddToHistoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:background="@drawable/border_radius_shape_primary_dark"
        android:padding="@dimen/margin_10"
        app:layout_constraintTop_toBottomOf="@id/ingredientsEditText">

        <TextView
            android:id="@+id/ingredientsAddToHistoryButtonCaloriesAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/margin_6"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_22"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/ingredientsAddToHistoryButtonCaloriesName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintBottom_toBottomOf="@id/ingredientsAddToHistoryButtonCaloriesAmount"
            app:layout_constraintStart_toEndOf="@id/ingredientsAddToHistoryButtonCaloriesAmount"
            app:layout_constraintTop_toTopOf="@id/ingredientsAddToHistoryButtonCaloriesAmount" />

        <TextView
            android:id="@+id/ingredientsAddToHistoryButtonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients_add_to_history_button_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ingredientsAddToHistoryButtonIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ingredientsAddToHistoryButtonIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_dimen_0"
        android:layout_margin="@dimen/margin_10"
        app:layout_constraintBottom_toTopOf="@+id/ingButtonContainer"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsAddToHistoryButton">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredientsRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/ingredients_recycler_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ingButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/fromIngToCalculatorButton"
            style="@style/nav_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/calculator_icon"
            android:text="@string/navigation_calculator" />

        <Button
            android:id="@+id/fromIngToRecipesButton"
            style="@style/nav_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/recipes_icon"
            android:text="@string/navigation_recipes" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>