<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLight"
    tools:context=".ui.fragments.sign_in.SignIn"
    tools:ignore="contentDescription, labelFor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/signUpLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:src="@drawable/ic_main_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/signInEmailEditText"
                style="@style/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUpLogo" />

            <EditText
                android:id="@+id/signInPasswordEditText"
                style="@style/password_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInEmailEditText" />

            <TextView
                android:id="@+id/signInToForgotPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_20"
                android:text="@string/sign_in_to_forgot_password_button"
                android:textColor="@color/secondaryGreen"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInPasswordEditText" />

            <Button
                android:id="@+id/signInButton"
                style="@style/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_button"
                app:layout_constraintTop_toBottomOf="@+id/signInToForgotPasswordButton" />

            <LinearLayout
                android:id="@+id/toSignUpContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInButton">

                <TextView
                    android:id="@+id/toSignUpContainerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_sign_up_container_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/toSignUpContainerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_6"
                    android:text="@string/to_sign_up_container_button"
                    android:textColor="@color/secondaryGreen"
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/signInCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_sign_in_check_box"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toSignUpContainer" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>