<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.calculator.Calculator"
    tools:ignore="contentDescription"
    android:background="@color/primaryLight">

    <TextView
        android:id="@+id/calcEmptyHistoryMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator_empty_history_message"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintBottom_toBottomOf="@+id/calcRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calcRecycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_dimen_0"
        app:layout_constraintBottom_toTopOf="@+id/calcButtonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/calculator_recycler_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/calcSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        app:borderWidth="@dimen/border_width_1"
        android:src="@drawable/ic_baseline_settings_24"
        app:tint="@color/white"
        android:backgroundTint="@color/primaryDark"
        app:layout_constraintBottom_toTopOf="@+id/calcButtonContainer"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/calcButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/fromCalcToRecipesButton"
            style="@style/nav_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/recipes_icon"
            android:text="@string/navigation_recipes" />
        <Button
            android:id="@+id/fromCalcToIngredientsButton"
            style="@style/nav_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ingredients_icon"
            android:text="@string/navigation_ingredients"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>